--- a/src/app/pages/admin/warehouse/warehouse-detail/warehouse-detail.component.html
+++ b/src/app/pages/admin/warehouse/warehouse-detail/warehouse-detail.component.html
@@ -1,1 +1,124 @@
-<p>warehouse-detail works!</p>
+<nb-card>
+    <nb-card-body>
+        <form [formGroup]="form">
+            <div class="row">
+                <div class="form-group">
+                    <input type="text" nbInput fullWidth class="form-control" formControlName="description"
+                        placeholder="Descripción"
+                        [status]="(description?.errors?.required || description?.hasError('minlength') || description?.hasError('maxlength') || description?.hasError('pattern')) && description.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Descripción" [showMinLength]="description?.hasError('minlength')"
+                        [showMaxLength]="description?.hasError('maxlength')"
+                        [showRequired]="description?.errors?.required && description.touched"
+                        [showPattern]="description?.hasError('pattern') && description.touched" minLength=1 maxLength=200>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="text" nbInput fullWidth class="form-control" formControlName="ubication"
+                        placeholder="Ubicación"
+                        [status]="(ubication?.errors?.required || ubication?.hasError('minlength') || ubication?.hasError('maxlength') || ubication?.hasError('pattern')) && ubication.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Ubicación" [showMinLength]="ubication?.hasError('minlength')"
+                        [showMaxLength]="ubication?.hasError('maxlength')"
+                        [showRequired]="ubication?.errors?.required && ubication.touched"
+                        [showPattern]="ubication?.hasError('pattern') && ubication.touched" minLength=1 maxLength=200>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="text" nbInput fullWidth class="form-control" formControlName="manager"
+                        placeholder="Responsable"
+                        [status]="(manager?.errors?.required || manager?.hasError('minlength') || manager?.hasError('maxlength') || manager?.hasError('pattern')) && manager.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Responsable" [showMinLength]="manager?.hasError('minlength')"
+                        [showMaxLength]="manager?.hasError('maxlength')"
+                        [showRequired]="manager?.errors?.required && manager.touched"
+                        [showPattern]="manager?.hasError('pattern') && manager.touched" minLength=1 maxLength=30>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="number" nbInput fullWidth class="form-control" formControlName="registerNumber"
+                        placeholder="No. registro"
+                        [status]="(registerNumber?.errors?.required || registerNumber?.hasError('minlength') || registerNumber?.hasError('maxlength') || registerNumber?.hasError('pattern')) && registerNumber.touched ? 'danger' : ''">
+                    <ngx-validation-message label="No. registro" [showMinLength]="registerNumber?.hasError('minlength')"
+                        [showMaxLength]="registerNumber?.hasError('maxlength')"
+                        [showRequired]="registerNumber?.errors?.required && registerNumber.touched"
+                        [showPattern]="registerNumber?.hasError('pattern') && registerNumber.touched" minLength=1 maxLength=100>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="number" nbInput fullWidth class="form-control" formControlName="stateCode"
+                        placeholder="Cod. estado"
+                        [status]="(stateCode?.errors?.required || stateCode?.hasError('minlength') || stateCode?.hasError('maxlength') || stateCode?.hasError('pattern')) && stateCode.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Cod. estado" [showMinLength]="stateCode?.hasError('minlength')"
+                        [showMaxLength]="stateCode?.hasError('maxlength')"
+                        [showRequired]="stateCode?.errors?.required && stateCode.touched"
+                        [showPattern]="stateCode?.hasError('pattern') && stateCode.touched" minLength=1 maxLength=100>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="number" nbInput fullWidth class="form-control" formControlName="cityCode"
+                        placeholder="Cod. ciudad"
+                        [status]="(cityCode?.errors?.required || cityCode?.hasError('minlength') || cityCode?.hasError('maxlength') || cityCode?.hasError('pattern')) && cityCode.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Cod. ciudad" [showMinLength]="cityCode?.hasError('minlength')"
+                        [showMaxLength]="cityCode?.hasError('maxlength')"
+                        [showRequired]="cityCode?.errors?.required && cityCode.touched"
+                        [showPattern]="cityCode?.hasError('pattern') && cityCode.touched" minLength=1 maxLength=100>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="number" nbInput fullWidth class="form-control" formControlName="municipalityCode"
+                        placeholder="Cod. municipio"
+                        [status]="(municipalityCode?.errors?.required || municipalityCode?.hasError('minlength') || municipalityCode?.hasError('maxlength') || municipalityCode?.hasError('pattern')) && municipalityCode.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Cod. municipio" [showMinLength]="municipalityCode?.hasError('minlength')"
+                        [showMaxLength]="municipalityCode?.hasError('maxlength')"
+                        [showRequired]="municipalityCode?.errors?.required && municipalityCode.touched"
+                        [showPattern]="municipalityCode?.hasError('pattern') && municipalityCode.touched" minLength=1 maxLength=100>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="number" nbInput fullWidth class="form-control" formControlName="localityCode"
+                        placeholder="Cod. localidad"
+                        [status]="(localityCode?.errors?.required || localityCode?.hasError('minlength') || localityCode?.hasError('maxlength') || localityCode?.hasError('pattern')) && localityCode.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Cod. localidad" [showMinLength]="localityCode?.hasError('minlength')"
+                        [showMaxLength]="localityCode?.hasError('maxlength')"
+                        [showRequired]="localityCode?.errors?.required && localityCode.touched"
+                        [showPattern]="localityCode?.hasError('pattern') && localityCode.touched" minLength=1 maxLength=100>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="text" nbInput fullWidth class="form-control" formControlName="indActive"
+                        placeholder="Ind. actividad"
+                        [status]="(indActive?.errors?.required || indActive?.hasError('minlength') || indActive?.hasError('maxlength') || indActive?.hasError('pattern')) && indActive.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Ind. actividad" [showMinLength]="indActive?.hasError('minlength')"
+                        [showMaxLength]="indActive?.hasError('maxlength')"
+                        [showRequired]="indActive?.errors?.required && indActive.touched"
+                        [showPattern]="indActive?.hasError('pattern') && indActive.touched" minLength=1 maxLength=1>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="text" nbInput fullWidth class="form-control" formControlName="type"
+                        placeholder="Tipo almacén"
+                        [status]="(type?.errors?.required || type?.hasError('minlength') || type?.hasError('maxlength') || type?.hasError('pattern')) && type.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Tipo almacén" [showMinLength]="type?.hasError('minlength')"
+                        [showMaxLength]="type?.hasError('maxlength')"
+                        [showRequired]="type?.errors?.required && type.touched"
+                        [showPattern]="type?.hasError('pattern') && type.touched" minLength=1 maxLength=50>
+                    </ngx-validation-message>
+                </div>
+                <div class="form-group">
+                    <input type="numeric" nbInput fullWidth class="form-control" formControlName="responsibleDelegation"
+                        placeholder="Responsable"
+                        [status]="(responsibleDelegation?.errors?.required || responsibleDelegation?.hasError('minlength') || responsibleDelegation?.hasError('maxlength') || responsibleDelegation?.hasError('pattern')) && responsibleDelegation.touched ? 'danger' : ''">
+                    <ngx-validation-message label="Responsable" [showMinLength]="responsibleDelegation?.hasError('minlength')"
+                        [showMaxLength]="responsibleDelegation?.hasError('maxlength')"
+                        [showRequired]="responsibleDelegation?.errors?.required && responsibleDelegation.touched"
+                        [showPattern]="responsibleDelegation?.hasError('pattern') && responsibleDelegation.touched" minLength=1 maxLength=100>
+                    </ngx-validation-message>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
+                </div>
+            </div>
+        </form>
+    </nb-card-body>
+</nb-card>
