--- a/src/app/pages/admin/status-code/status-code-detail/status-code-detail.component.html
+++ b/src/app/pages/admin/status-code/status-code-detail/status-code-detail.component.html
@@ -1,26 +1,50 @@
 <nb-card>
-    <nb-card-body>
-        <form [formGroup]="form">
-            
-            <div class="form-group row">
-                <input type="text" nbInput fullWidth maxlength="50" formControlName="descCode" matInput placeholder="Desc código"
-                [status]="form.controls['descCode']?.errors?.required  && form.controls['descCode'].touched ? 'danger' : ''">
+  <nb-card-body>
+    <form [formGroup]="form">
+      <div class="form-group">
+        <input type="text" nbInput fullWidth class="form-control" formControlName="id"
+          placeholder="Clave del código ej. 1"
+          [status]="(id?.errors?.required || id?.hasError('pattern') || id?.hasError('minlength') || id?.hasError('maxlength') ) && id.touched ? 'danger' : ''"
+        />
+        <ngx-validation-message label="Clave" 
+          [showMinLength]="id?.hasError('minlength')"
+          [showMaxLength]="id?.hasError('maxlength')"
+          [showRequired]="id?.errors?.required && id.touched"
+          [showPattern]="id?.hasError('pattern') && id.touched" minLength=1 maxLength=5>
+        </ngx-validation-message>
+      </div>
 
-                <label class="text-danger" *ngIf="validate['descCode'].hasError('required') && form.controls['descCode'].touched"><small>Ingrese una descripción código valida!</small></label>
-            </div>
+      <div class="form-group">
+        <input type="text" nbInput fullWidth class="form-control" formControlName="descCode"
+          placeholder="Descripción"
+          [status]="( descCode?.hasError('pattern') || descCode?.hasError('minlength') || descCode?.hasError('maxlength')) && descCode.touched ? 'danger' : ''"
+        />
+        <ngx-validation-message label="Descripción" 
+          [showMinLength]="descCode?.hasError('minlength')"
+          [showMaxLength]="descCode?.hasError('maxlength')"
+          [showPattern]="descCode?.hasError('pattern') && descCode.touched" minLength=1 maxLength=50>
+        </ngx-validation-message>
+      </div>
+      
+      <div class="form-group">
+        <input type="text" nbInput fullWidth class="form-control" formControlName="order"
+          placeholder="Orden ej. 123"
+          [status]="( order?.hasError('pattern') || order?.hasError('minlength') || order?.hasError('maxlength')) && order.touched ? 'danger' : ''"
+        />
+        <ngx-validation-message label="Orden" 
+          [showMinLength]="order?.hasError('minlength')"
+          [showMaxLength]="order?.hasError('maxlength')"
+          [showPattern]="order?.hasError('pattern') && order.touched" minLength=1 maxLength=3>
+        </ngx-validation-message>
+      </div>
 
-            <div class="form-group row">
-                <input type="number" nbInput  fullWidth formControlName="order" matInput placeholder="Orden"
-                [status]="form.controls['order']?.errors?.required  && form.controls['order'].touched ? 'danger' : ''">
+      <div class="form-group">
+        <div class="d-flex justify-content-center">
+          <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+            (click)="register()">{{actionBtn}}</button>
+        </div>
+      </div>
 
-                <label class="text-danger" *ngIf="validate['order'].hasError('required') && form.controls['order'].touched"><small>Ingrese un orden valido!</small></label>
-            </div>
-
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
-                </div>
-            </div>
-        </form>
-    </nb-card-body>
+    </form>
+  </nb-card-body>
 </nb-card>
